load("@rules_cuda//cuda:defs.bzl", "cuda_library", "cuda_binary")

cuda_binary(
    name = "vector-sum",
    srcs = ["vector-sum.cc"],
)

cuda_binary(
    name = "julia-gpu",
    srcs = ["julia-gpu.cc"],
    deps = [
        "//common:glfw-helper",
        "@glew//:glew_static",
        "@glfw//:glfw",
    ],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:opengl32.lib"],
        "@platforms//os:macos": ["-framework OpenGL"],
        "@platforms//os:linux": ["-lGL"],
        "//conditions:default": [],
    }),
)
