load("@rules_cuda//cuda:defs.bzl", "cuda_library", "cuda_binary")

cuda_binary(
    name = "add_loop_blocks",
    srcs = ["add_loop_blocks.cu"],
)

cuda_binary(
    name = "add_loop_long_blocks",
    srcs = ["add_loop_long_blocks.cu"],
)

cuda_binary(
    name = "cuda_dot",
    srcs = [":dot.cu"],
)

cuda_binary(
    name = "shared_bitmap",
    srcs = [":shared_bitmap.cu"],
    deps = [
        "@glew//:glew_static",
        "@glfw//:glfw",
    ],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:opengl32.lib"],
        "@platforms//os:macos": ["-framework OpenGL"],
        "@platforms//os:linux": ["-lGL"],
        "//conditions:default": [],
    }),
)

cuda_binary(
    name = "ripple",
    srcs = [":ripple.cu"],
    deps = [
        "@glew//:glew_static",
        "@glfw//:glfw",
    ],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:opengl32.lib"],
        "@platforms//os:macos": ["-framework OpenGL"],
        "@platforms//os:linux": ["-lGL"],
        "//conditions:default": [],
    }),
)
